# python-mlmodelmanager-client

./: .buildinfo  .bumpversion.cfg  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  example_config.ini  genindex.html  index.html  mypy.ini  objects.inv  publish-pypi.sh  publish-test.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: api.doctree  error.doctree  modelmanager.doctree  profile.doctree
.doctrees/tutorials/: dga-domain-classifier-keras-onnx.doctree  ecommerce_clustering.doctree  index.doctree
.doctrees/user_guide/: authentication.doctree  client-object.doctree  downloaders.doctree  functions-facade.doctree
.github/workflows/: bump-version.yml  deploy.yml  documentation.yml  publish-pypi.yml  publish-test.yml  release-candidate.yml  test-tox.yml
_modules/: index.html
_sources/tutorials/: dga-domain-scoring-gb-onnx.rst.txt  dga-domain-scoring-gbm-onnx.rst.txt  entity-classification-flow.rst.txt  index.rst.txt
_sources/user_guide/: client-object.rst.txt
api_reference/: api.html  auth.html  downloader.html  engines.html  error.html  index.html  modelmanager.html  profile.html  validator.html
devo_ml/modelmanager/: __init__.py  _client.py  _client_factory.py  _endpoint.py  _func_facade.py  api.py  auth.py  client.py  client_factory.py  downloader.py  endpoint.py  engines.py  error.py  func_facade.py  profile.py  validator.py
devo_model_manager_client/: __init__.py  api_client.py  configuration.py  rest.py
devo_model_manager_client/api/: __init__.py  default_api.py
devo_model_manager_client/custom/: __init__.py  api_client_hmac_auth.py  makeijan.py  (+1 more)
docs/: AlertPermissionVO.md  ApplicationsDTO.md  AuthMethodDefVO.md  AuthMethodVO.md  Body.md  Body1.md  Cluster.md  CombinedRoleFullView.md  CredentialView.md  DefaultApi.md  DomainPricePlanVO.md  DomainVO.md  Field.md  FinderView.md  Image.md  JwtCredMetadata.md  Model.md  ModelDetail.md  ModelReview.md  PolicyAccessView.md  ReportRenderTask.md  Reseller.md  ResellerVO.md  UserDomainVO.md  UserLogin.md  UserMetaDataModel.md  UserMetaDataModelLocale.md  UserResourceView.md  UserWebSettingsVO.md  VaultVO.md
makeijan_client/: __init__.py  api_client.py  configuration.py
notebooks/: dga-domain-classifier-keras-onnx.ipynb  dga-domain-classifier.ipynb  dga-domain-scoring-gb-onnx.ipynb  dga-domain-scoring-gbm-onnx.ipynb  ecommerce_clustering.ipynb  entity-classification-kmeans-onnx.ipynb
tests/: conftest.py  test_add_model.py  test_auth.py  test_client.py  test_downloader.py  test_endpoint.py  test_error.py  test_find_model.py  test_func_facade.py  test_get_model.py  test_legacy_client.py  test_profile.py
tutorials/: dga-domain-classifier-keras-onnx.html  dga-domain-classifier.html  dga-domain-scoring-gbm-onnx.html  ecommerce_clustering.html  entity-classification-kmeans-onnx.html  index.html
user_guide/: authentication.html  client-object.html  downloaders.html  functions-facade.html  index.html  installation.html
v1.0.1/: .buildinfo  genindex.html  index.html  py-modindex.html  searchindex.js
v1.1.0/: genindex.html  objects.inv  py-modindex.html  searchindex.js
v1.1.1/: index.html  objects.inv
v1.2.0/: search.html  searchindex.js
v1.2.1/: .buildinfo  genindex.html  searchindex.js
v1.3.0/: genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.4.0/: index.html  objects.inv  search.html  searchindex.js
v1.5.0/: genindex.html  objects.inv  py-modindex.html  search.html
v1.5.1/: objects.inv  search.html  searchindex.js
v1.5.2/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v1.6.0/: genindex.html  py-modindex.html
v1.6.1/: genindex.html  py-modindex.html
(+286 files in other folders)
