[tool.poetry]
name = "devo-mlmodelmanager"
version = "1.1.1"
description = "A client for Devo's ML model manager"
authors = ["Devo ML Team <machine.learning@devo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "devo_ml"}]
repository = "https://github.com/DevoInc/python-mlmodelmanager-client"
documentation = "https://devoinc.github.io/python-mlmodelmanager-client/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
types-requests = "^2.28.10"
flake8 = [
    {version = "5.0.4", python = ">=3.7,<3.8"},
    {version = "^5.0.4", python = ">=3.8"}
]
coverage = "^6.4.4"
requests-mock = "^1.10.0"
tox = "^3.26.0"
Sphinx = [
    {version = "4.3.0", python = ">=3.7,<3.8"},
    {version = "^5.3.0", python = ">=3.8"}
]
sphinx-autodoc-typehints = [
    {version = "1.17.1", python = ">=3.7,<3.8"},
    {version = "^1.19.4", python = ">=3.8"}
]
furo = "^2022.9.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
